# FileBrowserSeaWolf

./: CMakeLists.txt  FileBrowserSeaWolf.kdev4  FileFrameWidget.cpp  FileFrameWidget.h  main.cpp
Forms/: MainForm.cpp  MainForm.h  PropertiesDialogue.cpp  PropertiesDialogue.h  PropertiesDialogue.moc  ui_dialog_properties.h  ui_mainform.h
Logic/: ActionContextMenu.cpp  ActionContextMenu.h  BaseManager.cpp  BaseManager.h  ButtonLogic.cpp  ButtonLogic.h  ContextMenu.cpp  ContextMenu.h  ContextMenu.moc  CustomQComboBox.cpp  CustomQComboBox.h  FileFrameGrid.cpp  FileFrameGrid.h  FileFrameWidget.cpp  FileFrameWidget.h  FileFrameWidget.moc  FileLabel.cpp  FileLabel.h  FilePart.cpp  FilePart.h  FileTitle.cpp  FileTitle.h  FileWidget.cpp  FileWidget.h  FileWidget.moc  MainFormTreeView.cpp  MainFormTreeView.h  MainFormTreeView.moc  SystemCalls.cpp  SystemCalls.h  SystemCallsFactory.cpp  SystemCallsFactory.h  SystemCallsLinux.cpp  SystemCallsLinux.h
Resources/: ui_dialog_properteis.ui  ui_mainform.ui
